exports[`Backdrop 01 renders with default style 1`] = `
<div
  className="giu-backdrop"
  onTouchMove={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "height": "100vh",
      "left": 0,
      "opacity": 0.7,
      "position": "fixed",
      "top": 0,
      "width": "100vw",
    }
  } />
------------HTML PREVIEW---------------
<div
  class="giu-backdrop"
  style="background-color:white;height:100vh;left:0;opacity:0.7;position:fixed;top:0;width:100vw;"
>
</div>
`;

exports[`Backdrop 02 renders with custom style 1`] = `
<div
  className="giu-backdrop"
  onTouchMove={[Function]}
  onWheel={[Function]}
  style={
    Object {
      "backgroundColor": "black",
      "height": "100vh",
      "left": 0,
      "opacity": 0.7,
      "position": "fixed",
      "top": 0,
      "width": "100vw",
    }
  } />
------------HTML PREVIEW---------------
<div
  class="giu-backdrop"
  style="background-color:black;height:100vh;left:0;opacity:0.7;position:fixed;top:0;width:100vw;"
>
</div>
`;
